--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "express": "^4.16.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
-    "yelp-fusion": "^2.0.3",
-    "express": "^4.16.2"
+    "yelp-fusion": "^2.0.3"
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
