--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
+    "react-swipeable-views": "^0.12.14",
     "yelp-fusion": "^2.0.3"
   },
   "devDependencies": {
