--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "knex": "^0.15.0",
     "pg": "^7.4.3",
     "react": "^16.4.1",
+    "react-collapsible": "^2.2.0",
     "react-datetime-picker": "^1.3.4",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
