--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
     "knex": "^0.15.0",
+    "moment": "^2.22.2",
     "pg": "^7.4.3",
     "react": "^16.4.1",
     "react-datetime-picker": "^1.3.4",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
     "react-swipeable-views": "^0.12.14",
+    "save": "^2.3.2",
     "ws": "^5.2.1",
     "yelp-fusion": "^2.0.3"
   },
