--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.2",
     "knex": "^0.15.0",
+    "moment": "^2.22.2",
     "pg": "^7.4.3",
     "react": "^16.4.1",
     "react-collapsible": "^2.2.0",
     "react-datetime-picker": "^1.3.4",
     "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-swipeable-views": "^0.12.14",
     "ws": "^5.2.1",
