--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "knex": "^0.15.0",
     "moment": "^2.22.2",
     "pg": "^7.4.3",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-alert": "^4.0.4",
+    "react-alert-template-basic": "^1.0.0",
     "react-datetime-picker": "^1.3.4",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
     "react-swipeable-views": "^0.12.14",
+    "react-transition-group": "^2.4.0",
     "save": "^2.3.2",
     "ws": "^5.2.1",
     "yelp-fusion": "^2.0.3"
