--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "moment": "^2.22.2",
     "pg": "^7.4.3",
     "react": "^16.4.1",
+    "react-alert": "^4.0.4",
+    "react-alert-template-basic": "^1.0.0",
     "react-collapsible": "^2.2.0",
     "react-datetime-picker": "^1.3.4",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-swipeable-views": "^0.12.14",
+    "react-transition-group": "^2.4.0",
     "ws": "^5.2.1",
     "yelp-fusion": "^2.0.3"
   },
